/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
   Module Name          : factoryMethod.BankEnum
   Module Description   :

   Date Created      : 2018年1月16日
   Original Author   : 015336
   ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
package factoryMethod;

/**
 * @author 015336
 */
public enum BankEnum {
	NCCC, CTBC, CATHY, TSPG
}
